tests/errors/types/undefined-cast-type.fn
---
Description: Cast to an undefined type
Expected: FN3000
---

type Program
{
    static fn Main -> i32
    {
        var a = (Blah)5
        return 0
    }
}
